name:                bf
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/kintrix007/bf#readme
license:             BSD3
license-file:        LICENSE
author:              kintrix
maintainer:          boldizsar02@gmail.com
copyright:           2023 kintrix
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     CHANGELOG.md

executable bf
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       array
  other-modules:       Lex,
                       Parser,
                       Optimizer,
                       Interpreter,
                       Unoptimize
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
